add_library(Lavendel SHARED
        "src/Lavendel/Core/Core.h"
        "src/Lavendel/Core/Application.h"
        "src/Lavendel/Core/Application.cpp"
        "src/Lavendel/Core/Entrypoint.h"
        "src/Lavendel/Renderer/Renderer.h"
        "src/Lavendel/Renderer/Renderer.cpp"
        "src/Lavendel/Core/Log.h"
        "src/Lavendel/Core/Log.cpp"
        "src/Lavendel/Events/ApplicationEvent.h"
        "src/Lavendel/Events/Event.h"
        "src/Lavendel/Events/KeyEvent.h"
        "src/Lavendel/Events/MouseEvent.h"
        "src/Lavendel/Renderer/Window.cpp"
        "src/Lavendel/Renderer/Window.h"
        "src/Lavendel/Platform/Vulkan/VulkanPipeline.h"
        "src/Lavendel/Platform/Vulkan/VulkanPipeline.cpp"
        "src/Lavendel/Platform/Vulkan/VulkanDevice.cpp"
        "src/Lavendel/Platform/Vulkan/VulkanDevice.h"
        "src/Lavendel/Platform/Vulkan/VulkanSwapchain.cpp"
        "src/Lavendel/Platform/Vulkan/VulkanSwapchain.h"
        "src/Lavendel/Renderer/Renderer.h"
        "src/Lavendel/Renderer/Renderer.cpp"
        "src/Lavendel/Platform/Vulkan/VulkanModel.cpp"
        "src/Lavendel/Platform/Vulkan/VulkanModel.h"
        "src/lvpch.cpp"
        "src/lvpch.h"
        "src/Lavendel/Layers/Layer.cpp"
        "src/Lavendel/Layers/Layer.h"
        "src/Lavendel/Layers/LayerStack.cpp"
        "src/Lavendel/Layers/LayerStack.h"
        "src/Lavendel/ImGui/ImGuiLayer.h"
        "src/Lavendel/ImGui/ImGuiLayer.cpp"
        "src/Lavendel/ImGui/ImGuiRenderer.h"
        "src/Lavendel/ImGui/ImGuiRenderer.cpp"
        "src/Lavendel/ImGui/Widgets/DemoWidget.h"
        "src/Lavendel/ImGui/Widgets/DemoWidget.cpp"
        "src/Lavendel/Utils/Profiling/Instrumentor.h"
        "src/Lavendel/Platform/Vulkan/VulkanGameObject.cpp"
        "src/Lavendel/Platform/Vulkan/VulkanGameObject.h"
        "src/Lavendel/Renderer/Framebuffer.h"
        "src/Lavendel/Renderer/Framebuffer.cpp"
        "src/Lavendel/Platform/Vulkan/VulkanFramebuffer.cpp"
        "src/Lavendel/Platform/Vulkan/VulkanFramebuffer.h"
  "src/Lavendel/Renderer/RenderContext.h" "src/Lavendel/Renderer/RenderContext.cpp" "src/Lavendel/Renderer/RendererAPI.h" "src/Lavendel/Renderer/GameObject.h" "src/Lavendel/Renderer/GameObject.cpp" "src/Lavendel/Renderer/Model.h" "src/Lavendel/Renderer/Model.cpp" "src/Lavendel/Renderer/Pipeline.h" "src/Lavendel/Renderer/Pipeline.cpp" "src/Lavendel/Platform/Vulkan/VulkanRenderPass.h" "src/Lavendel/Platform/Vulkan/VulkanRenderPass.cpp" "src/Lavendel/Renderer/RenderPass.cpp" "src/Lavendel/Renderer/RenderPass.h" "src/Lavendel/Platform/Vulkan/VulkanRenderer.h" "src/Lavendel/Platform/Vulkan/VulkanRenderer.cpp" "src/Lavendel/Platform/Vulkan/VulkanContext.h" "src/Lavendel/Renderer/RenderCommandBuffer.h" "src/Lavendel/Renderer/RenderCommandBuffer.cpp")

if(WIN32 OR UNIX)
    set(SHADER_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/shaders)
    set(SHADER_OUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/shaders)
    file(MAKE_DIRECTORY ${SHADER_OUT_DIR})

    file(GLOB SHADER_FILES "${SHADER_SRC_DIR}/*.vert" "${SHADER_SRC_DIR}/*.frag")

    add_custom_target(
        CompileShaders ALL
    )

    foreach(SHADER_FILE ${SHADER_FILES})
        get_filename_component(SHADER_NAME ${SHADER_FILE} NAME)
        if(WIN32)
            add_custom_command(
                TARGET CompileShaders
                COMMAND ${CMAKE_COMMAND} -E echo "Compiling ${SHADER_NAME}..."
                COMMAND C:/VulkanSDK/1.4.328.1/Bin/glslc.exe ${SHADER_FILE} -o ${SHADER_OUT_DIR}/${SHADER_NAME}.spv
                VERBATIM
            )
        else()
            add_custom_command(
                TARGET CompileShaders
                COMMAND ${CMAKE_COMMAND} -E echo "Compiling ${SHADER_NAME}..."
                COMMAND glslc ${SHADER_FILE} -o ${SHADER_OUT_DIR}/${SHADER_NAME}.spv
                VERBATIM
            )
        endif()
    endforeach()

    add_dependencies(Lavendel CompileShaders)
    target_compile_definitions(Lavendel PRIVATE LV_BUILD_DLL)
    add_definitions(-DLV_BUILD_DLL)
endif()

add_subdirectory(vendor/spdlog)
add_subdirectory(vendor/volk)
add_subdirectory(vendor/glm)
add_subdirectory(vendor/sdl3)

find_package(Vulkan REQUIRED)
if (Vulkan_FOUND)
    message(STATUS "Vulkan include dir: ${Vulkan_INCLUDE_DIRS}")
    target_include_directories(Lavendel PUBLIC ${Vulkan_INCLUDE_DIRS})
    target_link_libraries(Lavendel PRIVATE ${Vulkan_LIBRARIES} SDL3::SDL3)
endif()

target_include_directories(Lavendel PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/include
        ${CMAKE_CURRENT_SOURCE_DIR}/src
        ${CMAKE_CURRENT_SOURCE_DIR}/vendor/sdl3/include
        ${CMAKE_CURRENT_SOURCE_DIR}/vendor/imgui
        ${CMAKE_CURRENT_SOURCE_DIR}
)

target_compile_definitions(Lavendel PRIVATE
        $<$<CONFIG:Debug>:LV_DEBUG>
        $<$<CONFIG:Release>:LV_RELEASE>
        $<$<CONFIG:Dist>:LV_DIST>
)

target_include_directories(Lavendel
        PUBLIC
        ${CMAKE_SOURCE_DIR}/Lavendel/vendor/spdlog/include/
        ${CMAKE_SOURCE_DIR}/Lavendel/vendor/glfw/include/
        ${CMAKE_SOURCE_DIR}/Lavendel/vendor/glm/
        ${CMAKE_SOURCE_DIR}/Lavendel/src/
        ${CMAKE_SOURCE_DIR}/Lavendel/src/Lavendel
)

target_precompile_headers(Lavendel PUBLIC ${CMAKE_SOURCE_DIR}/Lavendel/src/lvpch.h)

message(STATUS "LV_BUILD_DLL is defined: ${LV_BUILD_DLL}")
get_target_property(COMPILE_DEFS Lavendel COMPILE_DEFINITIONS)
message(STATUS "Lavendel compile definitions: ${COMPILE_DEFS}")

if(WIN32)
    add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
endif()

set(IMGUI_SRC
    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/ImGui/imgui.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/ImGui/imgui_draw.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/ImGui/imgui_widgets.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/ImGui/imgui_tables.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/ImGui/imgui_demo.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/ImGui/backends/imgui_impl_sdl3.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/ImGui/backends/imgui_impl_vulkan.cpp
)

target_sources(Lavendel PRIVATE ${IMGUI_SRC})

target_include_directories(Lavendel PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/ImGui/
    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/ImGui/backends
)
